fix backface visibility

--- a/src/App.css
+++ b/src/App.css
@@ -207,7 +207,6 @@ nav a:active {
 }
 
 
-
 .cardFront img {
     max-width: 90%;
     max-height: 90%;
@@ -216,11 +215,17 @@ nav a:active {
     transform: rotateY(180deg);
 }
 
+.cardFront {
+
+}
 
 .cardBack {
     display: flex;
     flex-direction: column;
     align-items: center;
+    transform: translateZ(1px);
+    backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
 }
 
 .cardBack img {
@@ -229,13 +234,9 @@ nav a:active {
     margin: 20px;
 }
 
-
-.cardBack {
-    transform: translateZ(1px);
-}
-
 .cardBack span {
     width: 100%;
+
 }
 
 
